# ruthark

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  Tip5.c  gpu-accelerator  mine.c  release-generated.sh  setup.sh
accelerators/: Cargo.toml  rusty-tags.vi
accelerators/benches/: lde_master_ext_table_gpu.rs  merkle_tree_gpu.rs  rescue_prime_regular_gpu.rs
accelerators/src/kernels/: LDE_gpu_kernel.rs  gpu_parallel.rs  lde_gpu_kernel.rs  merkle_tree_gpu_kernel.rs  mod.rs  proof_stream_kernel.rs  shared.rs  test_gpu_kernel.rs  tip5_gpu_kernel.rs
fut-src/: .gitignore  Aliasing.fut  BFieldElement.fut  Digest.fut  HistogramKernel.fut  KernelHelpers.fut  Makefile  MerkleTree.fut  PaddedKernel.fut  RescuePrime.fut  RescuePrime.py  RescuePrimeParameters.fut  SegmentedReduceKernel.fut  SegmentedScanAdd.fut  SegmentedSum.fut  Tip5.fut  Utils.fut  XFieldElement.fut  XFieldElementAsArray.fut  aet.fut  arithmetic_domain.fut  bfe_bench.fut  bfe_ntt.fut  bfe_ntt_bench.fut  bfe_poly.fut  bfield_codec.fut  futhark.pkg  main.fut  master_base_table.fut  master_ext_table.fut  mds.fut  mine.fut  polynomial.fut  proof.fut  proof_stream.fut  shared.fut  sponge_with_pending_absorb.fut  stark.fut  xfe_ntt.fut  xfe_poly.fut
futhark-library/: Cargo.toml
futhark-library/generated_lib/: Cargo.toml
futhark-library/generated_lib/lib/: a.c  a.fut  a.h  a.json
futhark-library/generated_lib/src/: arrays.rs  lib.rs
futhark_source/: Makefile  PFElem.fut  XFieldElement.fut  fastlib.fut  lib.fut  rp.fut
generated_lib/: Cargo.toml  build.rs  futhark-version.txt
generated_lib/lib/: a.c  a.fut  a.h  a.json  a.kernels.ispc
generated_lib/src/: arrays.rs  bindings.rs  context.rs  lib.rs
(+51 files in other folders)
