[package]
name = "generated_lib"
description = "Futhark matrix multiplication example"
version = "0.1.0"
authors = ["Name <name@example.com>"]
edition = "2018"
license = "YOLO"

[dependencies]

[build-dependencies]
cc = "1.0"

[features]
default = ["sequential_c"]
sequential_c = []
multicore_c = []
ispc = []
cuda = []
opencl = []
